fix check